--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".HomeActivity"/>
         <activity android:name=".SignUpActivity" />
         <activity android:name=".LogInActivity" />
+        <activity android:name=".MainTestActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
