--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -38,12 +38,11 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     //glide
     implementation 'com.firebaseui:firebase-ui-storage:5.0.0'
-
-// Find the latest Glide releases here: https://goo.gl/LpksbR
+    // Find the latest Glide releases here: https://goo.gl/LpksbR
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-// If you're using Kotlin (and therefore, kapt), use kapt instead of annotationProcessor
+    // If you're using Kotlin (and therefore, kapt), use kapt instead of annotationProcessor
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation files('C:/Users/infin/Documents/GitHub/Gapt2019/YouTubeAndroidPlayerApi.jar')
 }
